FEAT - refatoração: Spring Boot 4.1 + Java 25, correções de segurança e nova interface
- Migração para Spring Boot 4.1 / Spring Framework 7 / Jackson 3 com Java 25
- Correção de SSTI (whitelist de expressões no renderer), IDOR (escopo por usuário) e XSS (render via textContent)
- Remoção de credenciais do código (SMTP/JWT via variáveis de ambiente) e da dependência vulnerável ognl 3.3.1
- Correção do retry do RabbitMQ (fila de retry devolve à fila principal) e dos status de envio (RETRYING/FAILED)
- Arquitetura limpa: DTOs como records, ports na camada application, domínio sem Spring Security
- Front-end separado em static/ (HTML/CSS/JS) com nova interface, página de cadastro, envio e histórico
- Tratamento de erros com ProblemDetail (RFC 9457), Maven Wrapper regenerado, README reescrito

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>